# qweather-sdk

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
examples/: air_now.rs  air_station.rs  geo_city_lookup.rs  geo_city_top.rs  geo_poi_lookup.rs  geo_poi_range.rs  grid_weather_daily_forecast.rs  grid_weather_hourly_forecast.rs  grid_weather_now.rs  indices_forecast.rs  minutely_precipitation.rs  storm_forecast.rs  weather_daily_forecast.rs  weather_hourly_forecast.rs  weather_now.rs  weather_warning.rs  weather_warning_city_list.rs
examples/air-quality/: air_current.rs  air_daily_forecast.rs  air_hourly_forecast.rs  air_station.rs
src/: client.rs  error.rs  lib.rs  model.rs
src/api/: air_quality.rs  geo.rs  grid_weather.rs  indices.rs  minutely.rs  mod.rs  tropical_cyclone.rs  utils.rs  warning.rs  weather.rs
