[package]
name = "qweather-sdk"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["ZoOL <zhooul@gmail.com>"]
readme = "README.md"
description = "Client SDK to use QWeather API"
keywords = ["sdk", "qweather", "rest"]
documentation = "https://docs.rs/qweather-sdk"
repository = "https://github.com/foxzool/qweather-sdk"
homepage = "https://github.com/foxzool/qweather-sdk"
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "gzip"] }
tokio = { version = "1.0", default-features = false, features = ["net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4.5.0"
url = "2.5.2"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.61"
log = "0.4.22"

[dev-dependencies]
env_logger = "0.11.3"
dotenvy = "0.15.7"
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[[example]]
name = "weather_now"
path = "examples/weather_now.rs"

[[example]]
name = "weather_daily_forecast"
path = "examples/weather_daily_forecast.rs"

[[example]]
name = "weather_hourly_forecast"
path = "examples/weather_hourly_forecast.rs"

[[example]]
name = "geo_city_lookup"
path = "examples/geo_city_lookup.rs"

[[example]]
name = "geo_city_top"
path = "examples/geo_city_top.rs"

[[example]]
name = "geo_poi_lookup"
path = "examples/geo_poi_lookup.rs"

[[example]]
name = "geo_poi_range"
path = "examples/geo_poi_range.rs"

[[example]]
name = "minutely_precipitation"
path = "examples/minutely_precipitation.rs"

[[example]]
name = "grid_weather_now"
path = "examples/grid_weather_now.rs"

[[example]]
name = "grid_weather_daily_forecast"
path = "examples/grid_weather_daily_forecast.rs"

[[example]]
name = "grid_weather_hourly_forecast"
path = "examples/grid_weather_hourly_forecast.rs"

[[example]]
name = "weather_warning"
path = "examples/weather_warning.rs"

[[example]]
name = "weather_warning_city_list"
path = "examples/weather_warning_city_list.rs"

[[example]]
name = "indices_forecast"
path = "examples/indices_forecast.rs"